--- a/stucampus/static/styles/articles/article-phone.css
+++ b/stucampus/static/styles/articles/article-phone.css
@@ -32,13 +32,17 @@
     position: relative;
     top: 0;
     left: 0;
-    height: 9.8rem;
+    height: 14.066667rem;
     width: 25.0rem;
     overflow: hidden;
 }
 .artical-cover{
     position: absolute;
-    height: 9.8rem;
+    height: 14.066667rem;
+    width: 25.0rem;
+}
+.artical-cover img{
+    position: absolute;
     width: 25.0rem;
 }
 .up{
@@ -50,7 +54,7 @@
 }
 .blur{
     position: absolute;
-    height: 9.8rem;
+    height: 14.066667rem;
     width: 25.0rem;
     background-color: rgba(0,0,0,0.16);
 }
@@ -71,7 +75,7 @@
 }
 .artical-title{
     position: absolute;
-    top: 2.333333rem;
+    top: 6.233333rem;
     margin: 0 4.4rem;
     display: block;
     display: -webkit-box;
@@ -180,7 +184,16 @@
     font-size: 0.8rem;
     letter-spacing: ;
     font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei";
-
+}
+.artical-information a{
+    text-decoration: none;
+    margin: 1.6rem 0;
+    width: 21.8rem;
+    text-align: center;
+    color: rgba(0,0,0,0.54);
+    font-size: 0.8rem;
+    letter-spacing: ;
+    font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei";
 }
 .artical-text {
     width: 21.8rem;
