解决分类页加载下一页出错的问题

--- a/stucampus/static/styles/index-pc.css
+++ b/stucampus/static/styles/index-pc.css
@@ -151,6 +151,12 @@
     width: 19.333333rem;
     height: 11.666667rem;
     text-decoration: none;
+    overflow: hidden;
+}
+.a-pic img {
+    display: block;
+    width: 19.333333rem;
+    text-decoration: none;
 }
 .a-content{
     position: relative;
