--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -66,6 +66,10 @@
                     <a href="{% url 'szuspeech:manage_list' %}">讲座资源</a>
                     <a href="{% url 'szuspeech:add' %}">资源添加</a>
                 {% endif %}
+                {% if perms.carousels.slide_add %}
+                    <a href="{% url 'carousels:add' %}">添加焦点图</a>
+                    <a href="{% url 'carousels:manage' %}">焦点图列表</a>
+                {% endif %}
 
 
                 <!-- 以下代码未完成 -->
