--- a/stucampus/templates/member_infor/search_form.html
+++ b/stucampus/templates/member_infor/search_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap 实例 - 内联表单</title>
+	<title>学子天地内部通讯录</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<meta http-equiv="Content-Language" content="zh-CN" />
