--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <meta http-equiv="Content-Language" content="zh-CN" />
     <meta name="theme-color" content="#5BC5BE">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#5BC5BE" />
     {% block htmltitle %}<title>深圳大学学子天地</title>{% endblock %}
     {% block keywords %}{% endblock %}{% block description %}{% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
