--- a/stucampus/templates/carousels/carousel-form.html
+++ b/stucampus/templates/carousels/carousel-form.html
@@ -72,6 +72,18 @@
             </span>
         </li>
     </div>
+    <div class="line_aside"></div>
+    <div class="content">
+        <li>
+            <label>最后操作人</label>
+            {{ slide.modifier.student.true_name | default:"xx"}}
+        </li>
+        <div class="line_list"></div>
+        <li>
+            <label>修改时间</label>
+            {{ slide.lastModify | date:"Y-m-d" }}
+        </li>
+    </div>
     <div class="line_aside"></div>   
     <input type="submit" value="提交" class="add">    
 </form>  
