--- a/stucampus/templates/member_infor/login_fail.html
+++ b/stucampus/templates/member_infor/login_fail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap 实例 - 内联表单</title>
+	<title>学子通讯录</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	<meta http-equiv="Content-Language" content="zh-CN" />
@@ -33,6 +33,7 @@
 <body>
 	<div class="main">
 		<h2>你没有权限访问学子通讯录</h2>
+		<p>你可以<a href="{% url 'member_infor:apply' %}">申请添加进学子通讯录</a>，通过后，你就有权限访问了</p>
 	</div>
 	
 
