--- a/stucampus/templates/member_infor/member_form.html
+++ b/stucampus/templates/member_infor/member_form.html
@@ -27,6 +27,11 @@
     {
         color: red;
     }
+    .tips
+    {
+        width: 100%;
+        text-align: center;
+    }
 </style>
 
 {% endblock %}
