--- a/stucampus/templates/member_infor/modify_form.html
+++ b/stucampus/templates/member_infor/modify_form.html
@@ -46,41 +46,16 @@
 <body>
 	<div class="main">
 		<div class="header">
-			<span class="title"><a href="{% url 'member_infor:search' %}">学子通讯录</a></span>
-			<a class="modify_infor" href="{% url 'member_infor:user_modify_member' %}">修改自己的信息</a>
+			<span class="title">{{ title }}</span>
+			<a class="modify_infor" href="{% url 'member_infor:search' %}">返回</a>
 		</div>	
-		<form action="{% url 'member_infor:search' %}" method="POST" class="form-inline" role="form">
+		<form action="{{ post_url }}" method="POST" class="form-inline" role="form">
 		 {% csrf_token %}
 			<div class="form-group">
-				<label class="sr-only" for="q">搜索</label>
-				<input type="text" class="form-control" id="q" name="q"
-				placeholder="模糊搜索姓名、学号、昵称">
+				{{ form.as_p }}
 			</div>
 			<button type="submit" class="btn btn-default">提交</button>
 		</form>
-		{% if students %}
-		<table class="table table-striped">
-			<tr>
-				<th>姓名</th>
-				<th>昵称</th>
-				<th>学号</th>
-				<th>电话</th>
-			</tr>
-
-			{% for student in students %}
-			<tr>
-				<td>{{ student.name }}</td>
-				<td>{{ student.nick_name | default:'暂无'}}</td>
-				<td>{{ student.szu_no}}</td>
-				<td><a href="tel:{{ student.mobile_phone_number }}"><span></span>{{ student.mobile_phone_number }}</a></td>
-			</tr>
-			{% endfor %}
-		</table>
-		{% else %}
-			{% if tips %}
-			<p>{{ tips }}</p>
-			{% endif %}
-		{% endif %}
 	</div>
 	
 
