--- a/stucampus/templates/articles/article-display.html
+++ b/stucampus/templates/articles/article-display.html
@@ -35,7 +35,7 @@
         <p class="artical-title">{{ article.title }}</p>
     </div>
     <div class="artical-main">
-        <p class="artical-information">由 {{ article.author }} 发表于 <a href="/articles/{{ article.category.english_name }}">{{ article.category }}</a></p>
+        <p class="artical-information">由 {{ article.author }} 发表于 <a href="/articles/{{ article.category.english_name }}/">{{ article.category }}</a></p>
         <div class="artical-text">
 		{% autoescape off %}
 			{{ article.content |scale_ueditor_img:request}}
