--- a/stucampus/templates/ajax_article_list.html
+++ b/stucampus/templates/ajax_article_list.html
@@ -3,11 +3,11 @@
 {% for article in newest_articles %}
 <div class="artical">
     <a href="{% url 'articles:display' article.pk %}">
-        <img class="a-pic" src="{{ article.cover.name | scale_qiniu_img:request}}">
+        <div class="a-pic"><img src=" {{ article.cover.name | scale_qiniu_img:request }}"></div>
         <div class="a-content">
             <span class="a-title">{{ article.title | truncatechars:19  }}</span>
             <div class="a-info">
-                {{ article.category }}·{{ article.create_date | date:"n月d日"}}
+                {{ article.author }} · {{ article.category }} · {{ article.create_date | date:"n月d日"}}
             </div>
             <p class="a-intro">{{ article.summary }}</p>
         </div>
@@ -21,7 +21,7 @@
 </div>
 {% endfor %}
 {% if newest_articles.has_next %}
-    <div class="page_number">{{ newest_articles.number }}</div>
+<div class="page_number">{{ newest_articles.number }}</div>
 {% else %}
-    <div class="page_number">没有更多文章了</div>
+<div class="page_number">没有更多文章了</div>
 {% endif %}
