--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -17,8 +17,9 @@
     <![endif]-->
     {{ 'plugins/jquery.min.js' | as_js }}
     {{ 'plugins/jquery.lazyload.min.js' | as_js }}
+    {{ 'plugins/jquery.tools.min.js' | as_js }}
+    {{ 'plugins/jquery.form.js' | as_js }}
     {{ 'global.js' | as_js }}
-
     {{ 'message-box.css' | as_css }}
     {{ 'bases.css' | as_css }}
     {{ 'globals.js' | as_js }}
