--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -11,7 +11,10 @@
     {{ 'message-box.css' | as_css }}
 
     {{ 'plugins/jquery.min.js' | as_js }}
+    {{ 'plugins/jquery.tools.min.js' | as_js }}
+    {{ 'plugins/jquery.form.js' | as_js }}
     {{ 'global.js' | as_js }}
+    {{ 'plugins/jquery.form.js' | as_js }}
     {{ 'admin/global.js' | as_js }}
     {{ 'admin/upload.js' | as_js }}
     {% block htmlhead %}{% endblock %}
